# asr_transcription

./: .env.example  .gitignore  README.md  docker-compose-gpu.yml  docker-compose.yml  setup.sh
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  Dockerfile.gpu  README.md  pyproject.toml  pytest.ini
backend/notebook/: loading_methods_hg.ipynb  sanitizer.ipynb  test_loading_methods_hg.ipynb  whisper_model_experiment.ipynb  whisper_test_with_cuda.ipynb
backend/src/: celery_app.py  main.py  settings.py
backend/src/services/: celery_app.py  file_service.py  transcription_service.py  whisper_service.py
backend/src/utils/: db.py  schemas.py  security.py  settings.py
backend/tests_special_3/: __init__.py  conftest.py  test_celery_task_end_to_end_with_real_db.py  test_file_upload.py  test_health_check_dependency_failures.py
frontend/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: FileUpload.tsx  SearchBar.tsx  TranscriptionList.tsx
frontend/src/services/: api.ts  validation.ts
frontend/src/test/: setup.ts
frontend/src/tests_special_3/: test_complete_user_journey.test.tsx  test_multi_file_orchestration_user_flow.test.tsx  test_polling_memory_leak_prevention.test.tsx
frontend/src/types/: transcription.ts
frontend/src/utils/: sanitize.ts
sample_data/: README.md
